[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
solana-client = "2.0.5"
solana-sdk = "2.0.5"
spl-token = "8.0.0"
serde_json = "1.0.140"
bs58 = "0.5.1"
base64 = "0.22.1"
